--- a/css/styles.css
+++ b/css/styles.css
@@ -759,7 +759,6 @@ button {
   left: 165px;
   bottom: 40px;
   background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
@@ -769,6 +768,11 @@ button {
   justify-content: center;
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button:hover,
+.modal-button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .check-text {
   font-size: 14px;
