--- a/css/main.css
+++ b/css/main.css
@@ -102,11 +102,12 @@ header {
 }
 
 .section-title {
-  color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
   margin-top: 0;
   margin-bottom: 50px;
 }
@@ -144,10 +145,16 @@ button {
   color: var(--logo-color);
 }
 
-.down .accent {
-  color: var(--primary-white-color);
+.page-header {
+  display: flex;
+  align-items: center;
 }
 
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  gap: 46px;
+}
 .site-nav .link {
   color: var(--title-text-color);
   font-weight: 500;
@@ -162,20 +169,19 @@ button {
   padding-right: 2px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .link:hover, .site-nav .link:focus {
   color: var(--accent-color);
 }
-
 .site-nav .link.current {
   color: var(--accent-color);
 }
 
+/* .site-nav .item + .item {
+  margin-left: 46px;
+} */
 .current {
   position: relative;
 }
-
 .current::after {
   content: "";
   width: 100%;
@@ -187,6 +193,11 @@ button {
   left: 0;
 }
 
+.contact-info {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
+}
 .contact-info .link {
   font-weight: 500;
   font-size: 14px;
@@ -198,49 +209,12 @@ button {
   color: var(--primary-text-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contact-info .link:hover,
-.contact-info .link:focus {
+.contact-info .link:hover, .contact-info .link:focus {
   color: var(--accent-color);
 }
-
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-  gap: 46px;
-}
-
-/* .site-nav .item + .item {
-  margin-left: 46px;
-} */
-.page-header {
-  display: flex;
-  align-items: center;
-}
-
-.contact-info {
-  display: flex;
-  margin-left: auto;
-  gap: 50px;
-}
-
-/* .contact-info .item + .item {
-  margin-left: 50px;
-} */
 .contact-icon {
   fill: currentColor;
   margin-right: 10px;
-}
-
-.hero-title {
-  color: var(--primary-white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 30px;
 }
 
 .hero {
@@ -257,7 +231,22 @@ button {
   background-position: center;
   background-size: cover;
 }
+.hero-title {
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
 
+.feature-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
 .feature-list .title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -266,26 +255,9 @@ button {
   margin-top: 0;
   margin-bottom: 10px;
 }
-
-.feature-list p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.feature-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .feature-list .item {
   width: 270px;
-  margin-right: 30px;
 }
-
-.feature-list .item:nth-child(4n) {
-  margin-right: 0;
-}
-
 .feature-img-list {
   width: 270px;
   height: 120px;
@@ -416,15 +388,6 @@ button {
   fill: var(--primary-white-color);
 }
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-}
-
 .client-link {
   width: 170px;
   height: 92px;
@@ -435,26 +398,20 @@ button {
   justify-content: center;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.client-link:hover, .client-link:focus {
+  border-color: var(--accent-color);
+}
+.client-link:hover .client-soc-icon, .client-link:focus .client-soc-icon {
+  fill: var(--accent-color);
+}
 .client-list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
-
 .client-soc-icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-link:hover,
-.client-link:focus {
-  border-color: var(--accent-color);
-}
-
-.client-link:hover .client-soc-icon,
-.client-link:focus .client-soc-icon {
-  fill: var(--accent-color);
 }
 
 .button.secondary {
@@ -467,13 +424,18 @@ button {
   min-width: 73px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button.secondary:hover,
-.button.secondary:focus {
+.button.secondary:hover, .button.secondary:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   border-color: var(--accent-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 8px;
 }
 
 .section-portfolio {
@@ -485,52 +447,16 @@ button {
   margin-bottom: 4px;
 }
 
-.list .product {
-  font-size: 16px;
-  line-height: 1.87;
-}
-
-.filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-  gap: 8px;
-}
-
-/* .filter .item + .item {
-  margin-left: 8px;
-} */
 .product {
   display: flex;
   flex-wrap: wrap;
 }
-
 .product .item:nth-child(3n) {
   margin-right: 0;
 }
-
 .product .item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
-
-.border-product {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-
-.list.product .item:hover,
-.list.product .item:focus {
-  cursor: pointer;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.list.product .item:hover .product-top-text,
-.list.product .item:focus .product-top-text {
-  transform: translateY(0);
-}
-
 .product .item {
   width: 370px;
   margin-right: 30px;
@@ -538,12 +464,20 @@ button {
   position: relative;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.product-type {
+  font-size: 16px;
+  line-height: 1.87;
+}
+.product-border {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
 .product-top-wrap {
   position: relative;
   overflow: hidden;
 }
-
 .product-top-text {
   font-size: 18px;
   line-height: 1.56;
@@ -560,7 +494,36 @@ button {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.product .item:hover,
+.product .item:focus {
+  cursor: pointer;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.product .item:hover .product-top-text,
+.product .item:focus .product-top-text {
+  transform: translateY(0);
+}
 
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-section {
+  background-color: var(--secondary-bg-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer-section .accent {
+  color: var(--primary-white-color);
+}
+.footer-subscribe {
+  margin-top: 12px;
+  position: relative;
+}
+
+.site-footer {
+  margin-top: 20px;
+}
 .site-footer .map-link {
   color: var(--primary-white-color);
   text-decoration: none;
@@ -568,12 +531,9 @@ button {
   display: block;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-footer .map-link:hover,
-.site-footer .map-link:focus {
+.site-footer .map-link:hover, .site-footer .map-link:focus {
   color: var(--accent-color);
 }
-
 .site-footer .link {
   color: var(--white-mod);
   text-decoration: none;
@@ -581,27 +541,15 @@ button {
   display: block;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.site-footer .link:hover,
-.site-footer .link:focus {
+.site-footer .link:hover, .site-footer .link:focus {
   color: var(--accent-color);
 }
-
-.down {
-  background-color: var(--secondary-bg-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.down .accent {
-  color: var(--primary-white-color);
-}
-
 .site-footer .item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.site-footer {
-  margin-top: 20px;
+.page-invait {
+  margin-left: 70px;
 }
 
 .section-title-invait {
@@ -618,11 +566,9 @@ button {
   display: flex;
   gap: 10px;
 }
-
 .invait-soc-icon {
   fill: var(--primary-white-color);
 }
-
 .invait-soc-link {
   width: 44px;
   height: 44px;
@@ -633,25 +579,13 @@ button {
   justify-content: center;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.invait-soc-link:hover,
-.invait-soc-link:focus {
+.invait-soc-link:hover, .invait-soc-link:focus {
   background-color: var(--accent-color);
-}
-
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
-.page-invait {
-  margin-left: 70px;
 }
 
 .subscribe-form {
   margin-left: auto;
 }
-
 .subscribe-label {
   font-weight: 700;
   font-size: 14px;
@@ -660,12 +594,6 @@ button {
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
-
-.footer-subscribe {
-  margin-top: 12px;
-  position: relative;
-}
-
 .subscribe-input {
   width: 358px;
   height: 50px;
@@ -678,32 +606,27 @@ button {
   line-height: 1.25;
   letter-spacing: 0.03em;
 }
-
 .subscribe-input::-moz-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscribe-input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscribe-input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .subscribe-input:focus {
   outline: none;
 }
-
 .subscribe-button {
   width: 200px;
   height: 50px;
@@ -718,7 +641,6 @@ button {
   margin-left: 12px;
   padding: 10px 28px;
 }
-
 .subscribe-icon {
   fill: var(--primary-white-color);
   position: absolute;
@@ -919,7 +841,6 @@ button {
   display: flex;
   align-items: center;
 }
-
 .check-text .check-box {
   width: 16px;
   height: 15px;
