--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -156,17 +156,17 @@
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-}
-.check-text .check-box {
-  width: 16px;
-  height: 15px;
-  border: 1.75px solid #212121;
-  border-radius: 2px;
-  margin-right: 7px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .check-box {
+    width: 16px;
+    height: 15px;
+    border: 1.75px solid #212121;
+    border-radius: 2px;
+    margin-right: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .check-icon {
   fill: transparent;
