--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,13 +1,3 @@
-.hero-title {
-  color: var(--primary-white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 30px;
-}
 .hero {
   background-color: var(--secondary-bg-color);
   text-align: center;
@@ -25,4 +15,14 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  &-title {
+    color: var(--primary-white-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
 }
