--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -7,13 +7,19 @@
   padding: 6px 22px;
   min-width: 73px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
 }
-.button.secondary:hover,
-.button.secondary:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 8px;
 }
 .section-portfolio {
   color: var(--title-text-color);
@@ -23,68 +29,59 @@
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-.list .product {
-  font-size: 16px;
-  line-height: 1.87;
-}
-.filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-  gap: 8px;
-}
-/* .filter .item + .item {
-  margin-left: 8px;
-} */
 .product {
   display: flex;
   flex-wrap: wrap;
-}
-.product .item:nth-child(3n) {
-  margin-right: 0;
-}
-.product .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.border-product {
-  padding: 20px 24px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
-.list.product .item:hover,
-.list.product .item:focus {
-  cursor: pointer;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.list.product .item:hover .product-top-text,
-.list.product .item:focus .product-top-text {
-  transform: translateY(0);
-}
-.product .item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  position: relative;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.product-top-wrap {
-  position: relative;
-  overflow: hidden;
-}
-.product-top-text {
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(33, 150, 243, 0.9);
-  padding-top: 63px;
-  padding-left: 24px;
-  padding-right: 24px;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  .item {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    position: relative;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &-type {
+    font-size: 16px;
+    line-height: 1.87;
+  }
+  &-border {
+    padding: 20px 24px;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+  }
+  &-top-wrap {
+    position: relative;
+    overflow: hidden;
+  }
+  &-top-text {
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    padding-top: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .item:hover,
+  .item:focus {
+    cursor: pointer;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  .item:hover .product-top-text,
+  .item:focus .product-top-text {
+    transform: translateY(0);
+  }
 }
