--- a/css/main.css
+++ b/css/main.css
@@ -269,25 +269,19 @@ button {
   margin-bottom: 30px;
 }
 
-.section.make {
+.work {
   padding-top: 0;
 }
 
 .presentation {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
-
 .presentation .item {
   width: 370px;
-  margin-right: 30px;
   position: relative;
 }
-
-.presentation .item:nth-child(3n) {
-  margin-right: 0;
-}
-
 .presentation-top-text {
   color: var(--primary-white-color);
   background-color: rgba(47, 48, 58, 0.8);
@@ -307,7 +301,10 @@ button {
   height: 70px;
 }
 
-.team-list .team {
+.team {
+  background-color: var(--primary-bg-color);
+}
+.team-title {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -318,13 +315,11 @@ button {
   display: flex;
   justify-content: center;
 }
-
-.card {
-  padding: 30px 10px;
-  background-color: var(--primary-white-color);
-  border-radius: 0px 0px 4px 4px;
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
-
 .team-list .profession {
   font-size: 16px;
   line-height: 1.19;
@@ -334,28 +329,15 @@ button {
   justify-content: center;
   margin-bottom: 16px;
 }
-
-.section.team {
-  background-color: var(--primary-bg-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.team-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .team-list .item {
   width: 270px;
-  margin-right: 30px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
-.team-list .item:nth-child(4n) {
-  margin-right: 0;
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
 }
-
 .team-soc-link {
   width: 44px;
   height: 44px;
@@ -366,26 +348,21 @@ button {
   justify-content: center;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-soc-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+.team-soc-link:hover, .team-soc-link:focus {
+  background-color: var(--accent-color);
 }
-
+.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
+  fill: var(--primary-white-color);
+}
 .team-soc-icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-soc-link:hover,
-.team-soc-link:focus {
-  background-color: var(--accent-color);
-}
-
-.team-soc-link:hover .team-soc-icon,
-.team-soc-link:focus .team-soc-icon {
-  fill: var(--primary-white-color);
+.card {
+  padding: 30px 10px;
+  background-color: var(--primary-white-color);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .client-link {
@@ -869,6 +846,7 @@ button {
 
 .agree-link {
   color: var(--accent-color);
+  text-decoration: underline;
 }
 
 .modal-fieled.agree {
