--- a/sass/layouts/_presentation.scss
+++ b/sass/layouts/_presentation.scss
@@ -1,33 +1,30 @@
-.section.make {
+.work {
   padding-top: 0;
 }
 .presentation {
   display: flex;
   flex-wrap: wrap;
-}
-.presentation .item {
-  width: 370px;
-  margin-right: 30px;
-  position: relative;
-}
-.presentation .item:nth-child(3n) {
-  margin-right: 0;
-}
-.presentation-top-text {
-  color: var(--primary-white-color);
-  background-color: rgba(47, 48, 58, 0.8);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 70px;
+  gap: 30px;
+  .item {
+    width: 370px;
+    position: relative;
+  }
+  &-top-text {
+    color: var(--primary-white-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 70px;
+  }
 }
