--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -20,7 +20,7 @@ header {
 .link {
   text-decoration: none;
 }
-.visually-hidden {
+.visually__hidden {
   position: absolute;
   white-space: nowrap;
   width: 1px;
