--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,7 +6,7 @@ button {
   border: 0;
   border-radius: 4px;
 }
-.button.primary {
+.order__button {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   font-weight: 700;
