--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,6 +8,6 @@
 .accent {
   color: var(--logo-color);
 }
-.footer-section .accent {
+.footer__section .accent {
   color: var(--primary-white-color);
 }
