--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,7 +29,7 @@
   opacity: 0;
   pointer-events: none;
 }
-.modal-close-icon {
+.close__icon {
   fill: var(--logo-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -37,7 +37,7 @@
     fill: var(--accent-color);
   }
 }
-.modal-close {
+.modal__close {
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: center;
 }
-.modal-title {
+.modal__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -60,17 +60,17 @@
   margin-bottom: 12px;
   text-align: center;
 }
-.modal-fieled {
+.modal__fieled {
   margin-bottom: 10px;
+  &:nth-child(4n) {
+    margin-bottom: 0;
+  }
 }
-.modal-fieled:nth-child(4n) {
-  margin-bottom: 0;
-}
-.input-wrap {
+.input__wrap {
   position: relative;
   display: block;
 }
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -86,25 +86,25 @@
     outline: none;
   }
 }
-.input-icon {
+.input__icon {
   position: absolute;
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
   fill: var(--title-text-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .modal-input:focus + & {
+  .modal__input:focus + & {
     fill: var(--accent-color);
   }
 }
-.modal-label {
+.modal__label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   display: block;
   margin-bottom: 4px;
 }
-.online-comment {
+.online__comment {
   width: 100%;
   height: 120px;
   resize: none;
@@ -128,7 +128,7 @@
     outline: none;
   }
 }
-.modal-button {
+.modal__button {
   position: absolute;
   min-width: 200px;
   height: 50px;
@@ -150,13 +150,13 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
 }
-.check-text {
+.check__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-  .check-box {
+  .check__box {
     width: 16px;
     height: 15px;
     border: 1.75px solid #212121;
@@ -168,21 +168,22 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-.check-icon {
+.check__icon {
   fill: transparent;
-  .modal-check:checked + .check-text & {
+  .modal__check:checked + .check__text & {
     fill: var(--primary-white-color);
   }
 }
-.modal-check:checked + .check-text .check-box {
+.modal__check:checked + .check__text .check__box {
   background-color: var(--accent-color);
   border: none;
   box-shadow: none;
 }
-.agree-link {
+.agree__link {
   color: var(--accent-color);
+  text-decoration: underline;
 }
-.modal-fieled.agree {
+.modal__fieled.agree {
   display: flex;
   justify-content: center;
 }
