--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,9 +1,9 @@
-.client-list {
+.client__list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
-.client-link {
+.client__link {
   width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
@@ -17,11 +17,11 @@
     border-color: var(--accent-color);
   }
 }
-.client-soc-icon {
+.client__icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .client-link:hover &,
-  .client-link:focus & {
+  .client__link:hover &,
+  .client__link:focus & {
     fill: var(--accent-color);
   }
 }
