--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,41 +1,41 @@
-.footer-section {
+.footer__section {
   background-color: var(--secondary-bg-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer-container {
+.footer__container {
   display: flex;
   align-items: baseline;
 }
-.site-footer {
+.site__footer {
   margin-top: 20px;
-}
-.site-footer .map-link {
-  color: var(--primary-white-color);
-  text-decoration: none;
-  font-style: normal;
-  display: block;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  .map__link {
+    color: var(--primary-white-color);
+    text-decoration: none;
+    font-style: normal;
+    display: block;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+  .link {
+    color: var(--white-mod);
+    text-decoration: none;
+    font-style: normal;
+    display: block;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+  .item:not(:last-child) {
+    margin-bottom: 9px;
   }
 }
-.site-footer .link {
-  color: var(--white-mod);
-  text-decoration: none;
-  font-style: normal;
-  display: block;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-.site-footer .item:not(:last-child) {
-  margin-bottom: 9px;
-}
-.section-title-invait {
+.invait__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -44,14 +44,14 @@
   color: var(--primary-white-color);
   margin-bottom: 20px;
 }
-.invait-list {
+.invait__list {
   display: flex;
   gap: 10px;
 }
-.invait-soc-icon {
+.invait__icon {
   fill: var(--primary-white-color);
 }
-.invait-soc-link {
+.invait__link {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -65,13 +65,13 @@
     background-color: var(--accent-color);
   }
 }
-.page-invait {
+.page__invait {
   margin-left: 70px;
 }
-.subscribe-form {
+.subscribe__form {
   margin-left: auto;
 }
-.subscribe-label {
+.subscribe__label {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -79,11 +79,11 @@
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
-.footer-subscribe {
+.footer__subscribe {
   margin-top: 12px;
   position: relative;
 }
-.subscribe-input {
+.subscribe__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -104,7 +104,7 @@
     color: rgba(255, 255, 255, 0.6);
   }
 }
-.subscribe-button {
+.subscribe__button {
   width: 200px;
   height: 50px;
   background: var(--accent-color);
@@ -118,7 +118,7 @@
   margin-left: 12px;
   padding: 10px 28px;
 }
-.subscribe-icon {
+.subscribe__icon {
   fill: var(--primary-white-color);
   position: absolute;
   right: 28px;
