--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,4 +1,4 @@
-.site-nav {
+.navigation__list {
   display: flex;
   margin-left: 93px;
   gap: 46px;
@@ -37,7 +37,7 @@
     left: 0;
   }
 }
-.contact-info {
+.contact__list {
   display: flex;
   margin-left: auto;
   gap: 50px;
@@ -57,7 +57,7 @@
     }
   }
 }
-.page-header {
+.header__container {
   display: flex;
   align-items: center;
 }
