--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,4 +1,4 @@
-.button.secondary {
+.secondary__button {
   color: var(--title-text-color);
   background-color: var(--primary-bg-color);
   font-weight: 500;
@@ -21,7 +21,7 @@
   margin-bottom: 50px;
   gap: 8px;
 }
-.section-portfolio {
+.section__portfolio {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -29,21 +29,21 @@
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-.product-type {
+.product__type {
   font-size: 16px;
   line-height: 1.87;
 }
-.product-border {
+.product__border {
   padding: 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
 }
-.product-top-wrap {
+.product__wrap {
   position: relative;
   overflow: hidden;
 }
-.product-top-text {
+.top__text {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -59,7 +59,7 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.product {
+.product__list {
   display: flex;
   flex-wrap: wrap;
   .item:nth-child(3n) {
@@ -80,8 +80,8 @@
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
-  .item:hover .product-top-text,
-  .item:focus .product-top-text {
+  .item:hover .top__text,
+  .item:focus .top__text {
     transform: translateY(0);
   }
 }
