--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,7 +1,7 @@
 .team {
   background-color: var(--primary-bg-color);
 }
-.team-title {
+.team__title {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
 }
-.team-list {
+.team__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -30,12 +30,12 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 }
-.team-soc-list {
+.soc__list {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
-.team-soc-link {
+.soc__link {
   width: 44px;
   height: 44px;
   background-color: var(--primary-white-color);
@@ -49,11 +49,11 @@
     background-color: var(--accent-color);
   }
 }
-.team-soc-icon {
+.soc__icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .team-soc-link:hover &,
-  .team-soc-link:focus & {
+  .soc__link:hover &,
+  .soc__link:focus & {
     fill: var(--primary-white-color);
   }
 }
