--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,3 @@
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primary-white-color: #ffffff;
-  --white-mod: rgba(255, 255, 255, 0.6);
-  --primary-bg-color: #f5f4fa;
-  --secondary-bg-color: #2f303a;
-  --logo-color: #000000;
-  --border-header-color: #ececec;
-}
-
 *,
 *::before,
 *::after {
@@ -47,8 +35,8 @@ address {
 }
 
 body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
+  background-color: #ffffff;
+  color: #757575;
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
   font-size: 14px;
@@ -58,7 +46,7 @@ body {
 header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: var(--border-header-color);
+  border-bottom-color: #ececec;
 }
 
 /* border-bottom: 1px solid #ececec; */
@@ -106,7 +94,7 @@ header {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   margin-top: 0;
   margin-bottom: 50px;
 }
@@ -121,8 +109,8 @@ button {
 }
 
 .order__button {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -132,7 +120,7 @@ button {
 }
 
 .logo {
-  color: var(--accent-color);
+  color: #2196f3;
   font-family: Raleway, sans-serif;
   font-size: 26px;
   line-height: 1.19;
@@ -140,11 +128,11 @@ button {
 }
 
 .accent {
-  color: var(--logo-color);
+  color: #000000;
 }
 
 .footer__section .accent {
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .navigation__list {
@@ -153,7 +141,7 @@ button {
   gap: 46px;
 }
 .navigation__list .link {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -167,10 +155,10 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation__list .link:hover, .navigation__list .link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 .navigation__list .link.current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .current {
@@ -180,7 +168,7 @@ button {
   content: "";
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border-radius: 2px;
   position: absolute;
   bottom: -1px;
@@ -200,11 +188,11 @@ button {
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: var(--primary-text-color);
+  color: #757575;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact__list .link:hover, .contact__list .link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header__container {
@@ -212,13 +200,13 @@ button {
   align-items: center;
 }
 
-.contact-icon {
+.contact__icon {
   fill: currentColor;
   margin-right: 10px;
 }
 
 .hero__title {
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -229,7 +217,7 @@ button {
 }
 
 .hero {
-  background-color: var(--secondary-bg-color);
+  background-color: #2f303a;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -249,7 +237,7 @@ button {
   gap: 30px;
 }
 .feature__list .title {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -263,7 +251,7 @@ button {
 .feature__img {
   width: 270px;
   height: 120px;
-  background-color: var(--primary-bg-color);
+  background-color: #f5f4fa;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -286,7 +274,7 @@ button {
 }
 
 .services__title {
-  color: var(--primary-white-color);
+  color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
   font-weight: 700;
   font-size: 14px;
@@ -305,16 +293,16 @@ button {
 }
 
 .team {
-  background-color: var(--primary-bg-color);
+  background-color: #f5f4fa;
 }
 
 .team__title {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
@@ -329,7 +317,7 @@ button {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   margin-bottom: 16px;
@@ -348,7 +336,7 @@ button {
 .soc__link {
   width: 44px;
   height: 44px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -356,7 +344,7 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc__link:hover, .soc__link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .soc__icon {
@@ -364,12 +352,12 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc__link:hover .soc__icon, .soc__link:focus .soc__icon {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .card {
   padding: 30px 10px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -390,7 +378,7 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client__link:hover, .client__link:focus {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
 }
 
 .client__icon {
@@ -398,12 +386,12 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client__link:hover .client__icon, .client__link:focus .client__icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .secondary__button {
-  color: var(--title-text-color);
-  background-color: var(--primary-bg-color);
+  color: #212121;
+  background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -412,9 +400,9 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .secondary__button:hover, .secondary__button:focus {
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
+  border-color: #2196f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -426,7 +414,7 @@ button {
 }
 
 .section__portfolio {
-  color: var(--title-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -455,7 +443,7 @@ button {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color: var(--primary-white-color);
+  color: #ffffff;
   position: absolute;
   top: 0;
   left: 0;
@@ -496,7 +484,7 @@ button {
 }
 
 .footer__section {
-  background-color: var(--secondary-bg-color);
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -510,24 +498,24 @@ button {
   margin-top: 20px;
 }
 .site__footer .map__link {
-  color: var(--primary-white-color);
+  color: #ffffff;
   text-decoration: none;
   font-style: normal;
   display: block;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site__footer .map__link:hover, .site__footer .map__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 .site__footer .link {
-  color: var(--white-mod);
+  color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   font-style: normal;
   display: block;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site__footer .link:hover, .site__footer .link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 .site__footer .item:not(:last-child) {
   margin-bottom: 9px;
@@ -539,7 +527,7 @@ button {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
@@ -549,7 +537,7 @@ button {
 }
 
 .invait__icon {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .invait__link {
@@ -563,7 +551,7 @@ button {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .invait__link:hover, .invait__link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .page__invait {
@@ -580,7 +568,7 @@ button {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .footer__subscribe {
@@ -593,7 +581,7 @@ button {
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   background-color: transparent;
   padding: 16px 15px;
   font-size: 16px;
@@ -625,9 +613,9 @@ button {
 .subscribe__button {
   width: 200px;
   height: 50px;
-  background: var(--accent-color);
+  background: #2196f3;
   border-radius: 4px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -638,7 +626,7 @@ button {
 }
 
 .subscribe__icon {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
   position: absolute;
   right: 28px;
   top: 50%;
@@ -657,7 +645,7 @@ button {
 .modal {
   width: 528px;
   min-height: 581px;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
@@ -679,11 +667,11 @@ button {
 }
 
 .close__icon {
-  fill: var(--logo-color);
+  fill: #000000;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close__icon:hover, .close__icon:focus {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .modal__close {
@@ -691,7 +679,7 @@ button {
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   position: absolute;
   top: 8px;
   right: 8px;
@@ -706,7 +694,7 @@ button {
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
   margin-bottom: 12px;
   text-align: center;
 }
@@ -732,11 +720,11 @@ button {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-  color: var(--logo-color);
+  color: #000000;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__input:focus {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   outline: none;
 }
 
@@ -745,11 +733,11 @@ button {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
-  fill: var(--title-text-color);
+  fill: #212121;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__input:focus + .input__icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .modal__label {
@@ -771,7 +759,7 @@ button {
   letter-spacing: 0.01em;
   padding: 12px 16px;
   margin-bottom: 20px;
-  color: var(--logo-color);
+  color: #000000;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .online__comment::-moz-placeholder {
@@ -793,7 +781,7 @@ button {
   color: rgba(117, 117, 117, 0.5);
 }
 .online__comment:focus {
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   outline: none;
 }
 
@@ -803,7 +791,7 @@ button {
   height: 50px;
   left: 165px;
   bottom: 40px;
-  background: #188ce8;
+  background: #2196f3;
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
@@ -812,7 +800,7 @@ button {
   align-items: center;
   justify-content: center;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__button:hover, .modal__button:focus {
@@ -842,17 +830,17 @@ button {
   fill: transparent;
 }
 .modal__check:checked + .check__text .check__icon {
-  fill: var(--primary-white-color);
+  fill: #ffffff;
 }
 
 .modal__check:checked + .check__text .check__box {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   border: none;
   box-shadow: none;
 }
 
 .agree__link {
-  color: var(--accent-color);
+  color: #2196f3;
   text-decoration: underline;
 }
 
