--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,15 +1,15 @@
 body {
-  background-color: var(--primary-white-color);
-  color: var(--primary-text-color);
-  font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
+  background-color: $backgroundColor;
+  color: $primaryTextColor;
+  font-family: $primaryFont;
+  letter-spacing: $mediumLetterSpacing;
   font-size: 14px;
   line-height: 1.71;
 }
 header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: var(--border-header-color);
+  border-bottom-color: $borderHeaderColor;
 }
 /* border-bottom: 1px solid #ececec; */
 .list {
