--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,14 +3,14 @@
   top: 0%;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: $backDropColor;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   width: 528px;
   min-height: 581px;
-  background-color: var(--primary-white-color);
+  background-color: $backgroundColor;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -30,11 +30,11 @@
   pointer-events: none;
 }
 .close__icon {
-  fill: var(--logo-color);
+  fill: $logoHeaderColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    fill: var(--accent-color);
+    fill: $accentColor;
   }
 }
 .modal__close {
@@ -42,7 +42,7 @@
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color: var(--primary-white-color);
+  background-color: $backgroundColor;
   position: absolute;
   top: 8px;
   right: 8px;
@@ -51,12 +51,12 @@
   justify-content: center;
 }
 .modal__title {
-  font-weight: 700;
+  font-weight: $boldWeight;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  letter-spacing: $mediumLetterSpacing;
+  color: $titleTextColor;
   margin-bottom: 12px;
   text-align: center;
 }
@@ -78,11 +78,11 @@
   padding-left: 42px;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: var(--logo-color);
+  letter-spacing: $smallLetterSpacing;
+  color: $logoHeaderColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus {
-    border-color: var(--accent-color);
+    border-color: $accentColor;
     outline: none;
   }
 }
@@ -91,16 +91,16 @@
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
-  fill: var(--title-text-color);
+  fill: $titleTextColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .modal__input:focus + & {
-    fill: var(--accent-color);
+    fill: $accentColor;
   }
 }
 .modal__label {
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
+  letter-spacing: $smallLetterSpacing;
   display: block;
   margin-bottom: 4px;
 }
@@ -112,19 +112,19 @@
   border-radius: 4px;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
+  letter-spacing: $smallLetterSpacing;
   padding: 12px 16px;
   margin-bottom: 20px;
-  color: var(--logo-color);
+  color: $logoHeaderColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &::placeholder {
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+    letter-spacing: $smallLetterSpacing;
+    color: $onlineCommentColor;
   }
   &:focus {
-    border-color: var(--accent-color);
+    border-color: $accentColor;
     outline: none;
   }
 }
@@ -134,16 +134,16 @@
   height: 50px;
   left: 165px;
   bottom: 40px;
-  background: #188ce8;
+  background: $accentColor;
   border-radius: 4px;
-  font-weight: 700;
+  font-weight: $boldWeight;
   font-size: 16px;
   line-height: 1.87;
   display: flex;
   align-items: center;
   justify-content: center;
-  letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  letter-spacing: $largeLetterSpacing;
+  color: $backgroundColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
@@ -153,7 +153,7 @@
 .check__text {
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: $mediumLetterSpacing;
   display: flex;
   align-items: center;
   .check__box {
@@ -171,16 +171,16 @@
 .check__icon {
   fill: transparent;
   .modal__check:checked + .check__text & {
-    fill: var(--primary-white-color);
+    fill: $backgroundColor;
   }
 }
 .modal__check:checked + .check__text .check__box {
-  background-color: var(--accent-color);
+  background-color: $accentColor;
   border: none;
   box-shadow: none;
 }
 .agree__link {
-  color: var(--accent-color);
+  color: $accentColor;
   text-decoration: underline;
 }
 .modal__fieled.agree {
