--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -14,7 +14,7 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    border-color: var(--accent-color);
+    border-color: $accentColor;
   }
 }
 .client__icon {
@@ -22,6 +22,6 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .client__link:hover &,
   .client__link:focus & {
-    fill: var(--accent-color);
+    fill: $accentColor;
   }
 }
