--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,5 +1,5 @@
 .footer__section {
-  background-color: var(--secondary-bg-color);
+  background-color: $footerBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -10,25 +10,25 @@
 .site__footer {
   margin-top: 20px;
   .map__link {
-    color: var(--primary-white-color);
+    color: $backgroundColor;
     text-decoration: none;
     font-style: normal;
     display: block;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: $accentColor;
     }
   }
   .link {
-    color: var(--white-mod);
+    color: $footerTextColor;
     text-decoration: none;
     font-style: normal;
     display: block;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: $accentColor;
     }
   }
   .item:not(:last-child) {
@@ -36,12 +36,12 @@
   }
 }
 .invait__title {
-  font-weight: 700;
+  font-weight: $boldWeight;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+  letter-spacing: $mediumLetterSpacing;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: $backgroundColor;
   margin-bottom: 20px;
 }
 .invait__list {
@@ -49,7 +49,7 @@
   gap: 10px;
 }
 .invait__icon {
-  fill: var(--primary-white-color);
+  fill: $backgroundColor;
 }
 .invait__link {
   width: 44px;
@@ -62,7 +62,7 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    background-color: var(--accent-color);
+    background-color: $accentColor;
   }
 }
 .page__invait {
@@ -72,12 +72,12 @@
   margin-left: auto;
 }
 .subscribe__label {
-  font-weight: 700;
+  font-weight: $boldWeight;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+  letter-spacing: $mediumLetterSpacing;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: $backgroundColor;
 }
 .footer__subscribe {
   margin-top: 12px;
@@ -88,38 +88,38 @@
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  color: var(--primary-white-color);
+  color: $backgroundColor;
   background-color: transparent;
   padding: 16px 15px;
   font-size: 16px;
   line-height: 1.25;
-  letter-spacing: 0.03em;
+  letter-spacing: $mediumLetterSpacing;
   &:focus {
     outline: none;
   }
   &::placeholder {
     font-size: 16px;
     line-height: 1.25;
-    letter-spacing: 0.03em;
+    letter-spacing: $mediumLetterSpacing;
     color: rgba(255, 255, 255, 0.6);
   }
 }
 .subscribe__button {
   width: 200px;
   height: 50px;
-  background: var(--accent-color);
+  background: $accentColor;
   border-radius: 4px;
-  color: var(--primary-white-color);
-  font-weight: 700;
+  color: $backgroundColor;
+  font-weight: $boldWeight;
   font-size: 16px;
   line-height: 1.88;
   text-align: left;
-  letter-spacing: 0.06em;
+  letter-spacing: $largeLetterSpacing;
   margin-left: 12px;
   padding: 10px 28px;
 }
 .subscribe__icon {
-  fill: var(--primary-white-color);
+  fill: $backgroundColor;
   position: absolute;
   right: 28px;
   top: 50%;
