--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,11 +3,11 @@
   margin-left: 93px;
   gap: 46px;
   .link {
-    color: var(--title-text-color);
-    font-weight: 500;
+    color: $titleTextColor;
+    font-weight: $mediumWeight;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
+    letter-spacing: $preSmallLetterSpacing;
     text-decoration: none;
     display: block;
     padding-top: 32px;
@@ -17,11 +17,11 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: $accentColor;
     }
   }
   .link.current {
-    color: var(--accent-color);
+    color: $accentColor;
   }
 }
 .current {
@@ -30,7 +30,7 @@
     content: '';
     width: 100%;
     height: 4px;
-    background-color: var(--accent-color);
+    background-color: $accentColor;
     border-radius: 2px;
     position: absolute;
     bottom: -1px;
@@ -42,18 +42,18 @@
   margin-left: auto;
   gap: 50px;
   .link {
-    font-weight: 500;
+    font-weight: $mediumWeight;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
+    letter-spacing: $preSmallLetterSpacing;
     text-decoration: none;
     display: flex;
     align-items: center;
-    color: var(--primary-text-color);
+    color: $primaryTextColor;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-      color: var(--accent-color);
+      color: $accentColor;
     }
   }
 }
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;
 }
-.contact-icon {
+.contact__icon {
   fill: currentColor;
   margin-right: 10px;
 }
