--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,15 +1,15 @@
 .hero__title {
-  color: var(--primary-white-color);
-  font-weight: 900;
+  color: $backgroundColor;
+  font-weight: $blackWeight;
   font-size: 44px;
   line-height: 1.36;
-  letter-spacing: 0.06em;
+  letter-spacing: $largeLetterSpacing;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 30px;
 }
 .hero {
-  background-color: var(--secondary-bg-color);
+  background-color: $footerBackgroundColor;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
