--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,7 +1,7 @@
 .secondary__button {
-  color: var(--title-text-color);
-  background-color: var(--primary-bg-color);
-  font-weight: 500;
+  color: $titleTextColor;
+  background-color: $secondaryBackgroundColor;
+  font-weight: $mediumWeight;
   font-size: 16px;
   line-height: 1.62;
   padding: 6px 22px;
@@ -9,9 +9,9 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
+    color: $backgroundColor;
+    background-color: $accentColor;
+    border-color: $accentColor;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 }
@@ -22,11 +22,11 @@
   gap: 8px;
 }
 .section__portfolio {
-  color: var(--title-text-color);
-  font-weight: 700;
+  color: $titleTextColor;
+  font-weight: $boldWeight;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
+  letter-spacing: $largeLetterSpacing;
   margin-bottom: 4px;
 }
 .product__type {
@@ -46,8 +46,8 @@
 .top__text {
   font-size: 18px;
   line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-color);
+  letter-spacing: $mediumLetterSpacing;
+  color: $backgroundColor;
   position: absolute;
   top: 0;
   left: 0;
