--- a/sass/layouts/_presentation.scss
+++ b/sass/layouts/_presentation.scss
@@ -11,13 +11,13 @@
   }
 }
 .services__title {
-  color: var(--primary-white-color);
+  color: $backgroundColor;
   background-color: rgba(47, 48, 58, 0.8);
-  font-weight: 700;
+  font-weight: $boldWeight;
   font-size: 14px;
   line-height: 1.14;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: $mediumLetterSpacing;
   text-transform: uppercase;
   position: absolute;
   bottom: 0;
