--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,13 +1,13 @@
 .team {
-  background-color: var(--primary-bg-color);
+  background-color: $secondaryBackgroundColor;
 }
 .team__title {
-  color: var(--title-text-color);
-  font-weight: 500;
+  color: $titleTextColor;
+  font-weight: $mediumWeight;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  background-color: var(--primary-white-color);
+  background-color: $backgroundColor;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    background-color: var(--primary-white-color);
+    background-color: $backgroundColor;
     display: flex;
     justify-content: center;
     margin-bottom: 16px;
@@ -38,7 +38,7 @@
 .soc__link {
   width: 44px;
   height: 44px;
-  background-color: var(--primary-white-color);
+  background-color: $backgroundColor;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -46,7 +46,7 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    background-color: var(--accent-color);
+    background-color: $accentColor;
   }
 }
 .soc__icon {
@@ -54,11 +54,11 @@
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .soc__link:hover &,
   .soc__link:focus & {
-    fill: var(--primary-white-color);
+    fill: $backgroundColor;
   }
 }
 .card {
   padding: 30px 10px;
-  background-color: var(--primary-white-color);
+  background-color: $backgroundColor;
   border-radius: 0px 0px 4px 4px;
 }
