--- a/sass/layouts/_presentation.scss
+++ b/sass/layouts/_presentation.scss
@@ -1,7 +1,7 @@
-.presentation {
+.page-presentation {
   padding-top: 0;
 }
-.presentation__list {
+.presentation {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -10,7 +10,7 @@
     position: relative;
   }
 }
-.services__title {
+.presentation__title {
   color: $backgroundColor;
   background-color: rgba(47, 48, 58, 0.8);
   font-weight: $boldWeight;
