--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,7 +6,7 @@ button {
   border: 0;
   border-radius: 4px;
 }
-.order__button {
+.hero__button {
   color: $backgroundColor;
   background-color: $accentColor;
   font-weight: $boldWeight;
