--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -37,7 +37,7 @@
     left: 0;
   }
 }
-.contact__list {
+.contact {
   display: flex;
   margin-left: auto;
   gap: 50px;
@@ -57,7 +57,7 @@
     }
   }
 }
-.header__container {
+.page-header {
   display: flex;
   align-items: center;
 }
