--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,7 @@ button {
   background-color: #f5f4fa;
 }
 
-.team__title {
+.team-card__title {
   color: #212121;
   font-weight: 500;
   font-size: 16px;
@@ -308,12 +308,12 @@ button {
   justify-content: center;
 }
 
-.team__list {
+.team {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
-.team__list .profession {
+.team .team-card__profession {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -322,7 +322,7 @@ button {
   justify-content: center;
   margin-bottom: 16px;
 }
-.team__list .item {
+.team .item {
   width: 270px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -355,7 +355,7 @@ button {
   fill: #ffffff;
 }
 
-.card {
+.team-card {
   padding: 30px 10px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
