--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,7 +29,7 @@
   opacity: 0;
   pointer-events: none;
 }
-.close__icon {
+.modal__close__icon {
   fill: $logoHeaderColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
