--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,15 +1,15 @@
-.footer__section {
+.footer {
   background-color: $footerBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer__container {
+.page-footer {
   display: flex;
   align-items: baseline;
 }
-.site__footer {
+.footer-info__list {
   margin-top: 20px;
-  .map__link {
+  .footer-info__link {
     color: $backgroundColor;
     text-decoration: none;
     font-style: normal;
@@ -35,7 +35,7 @@
     margin-bottom: 9px;
   }
 }
-.invait__title {
+.page-invait__title {
   font-weight: $boldWeight;
   font-size: 14px;
   line-height: 1.14;
@@ -44,11 +44,11 @@
   color: $backgroundColor;
   margin-bottom: 20px;
 }
-.invait__list {
+.invait-social {
   display: flex;
   gap: 10px;
 }
-.invait__icon {
+.invait-social__icon {
   fill: $backgroundColor;
 }
 .invait__link {
@@ -65,13 +65,13 @@
     background-color: $accentColor;
   }
 }
-.page__invait {
+.page-invait {
   margin-left: 70px;
 }
-.subscribe__form {
+.subscribe-form {
   margin-left: auto;
 }
-.subscribe__label {
+.subscribe-form__label {
   font-weight: $boldWeight;
   font-size: 14px;
   line-height: 1.14;
@@ -79,11 +79,11 @@
   text-transform: uppercase;
   color: $backgroundColor;
 }
-.footer__subscribe {
+.footer-subscribe {
   margin-top: 12px;
   position: relative;
 }
-.subscribe__input {
+.footer-subscribe__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -104,7 +104,7 @@
     color: rgba(255, 255, 255, 0.6);
   }
 }
-.subscribe__button {
+.footer-subscribe__button {
   width: 200px;
   height: 50px;
   background: $accentColor;
@@ -118,7 +118,7 @@
   margin-left: 12px;
   padding: 10px 28px;
 }
-.subscribe__icon {
+.footer-subscribe__icon {
   fill: $backgroundColor;
   position: absolute;
   right: 28px;
