--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -30,12 +30,12 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 }
-.soc__list {
+.social {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
-.soc__link {
+.social__link {
   width: 44px;
   height: 44px;
   background-color: $backgroundColor;
@@ -49,11 +49,11 @@
     background-color: $accentColor;
   }
 }
-.soc__icon {
+.social__icon {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .soc__link:hover &,
-  .soc__link:focus & {
+  .social__link:hover &,
+  .social__link:focus & {
     fill: $backgroundColor;
   }
 }
