--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -179,7 +179,7 @@
   border: none;
   box-shadow: none;
 }
-.agree__link {
+.modal__link {
   color: $accentColor;
   text-decoration: underline;
 }
