--- a/css/main.css
+++ b/css/main.css
@@ -127,11 +127,11 @@ button {
   text-decoration: none;
 }
 
-.accent {
+.page-header__logo {
   color: #000000;
 }
 
-.footer__section .accent {
+.footer-info__logo--inverse {
   color: #ffffff;
 }
 
@@ -389,7 +389,7 @@ button {
   fill: #2196f3;
 }
 
-.secondary__button {
+.filter__button {
   color: #212121;
   background-color: #f5f4fa;
   font-weight: 500;
@@ -399,7 +399,7 @@ button {
   min-width: 73px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.secondary__button:hover, .secondary__button:focus {
+.filter__button:hover, .filter__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   border-color: #2196f3;
@@ -413,7 +413,7 @@ button {
   gap: 8px;
 }
 
-.section__portfolio {
+.product__title {
   color: #212121;
   font-weight: 700;
   font-size: 18px;
@@ -439,7 +439,7 @@ button {
   overflow: hidden;
 }
 
-.top__text {
+.product__description {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -456,30 +456,30 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.product__list {
+.product {
   display: flex;
   flex-wrap: wrap;
 }
-.product__list .item:nth-child(3n) {
+.product .item:nth-child(3n) {
   margin-right: 0;
 }
-.product__list .item:nth-last-child(-n+3) {
+.product .item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
-.product__list .item {
+.product .item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   position: relative;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.product__list .item:hover,
-.product__list .item:focus {
+.product .item:hover,
+.product .item:focus {
   cursor: pointer;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.product__list .item:hover .top__text,
-.product__list .item:focus .top__text {
+.product .item:hover .product__description,
+.product .item:focus .product__description {
   transform: translateY(0);
 }
 
@@ -839,7 +839,7 @@ button {
   box-shadow: none;
 }
 
-.agree__link {
+.modal__link {
   color: #2196f3;
   text-decoration: underline;
 }
