--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,4 +1,4 @@
-.secondary__button {
+.filter__button {
   color: $titleTextColor;
   background-color: $secondaryBackgroundColor;
   font-weight: $mediumWeight;
@@ -21,7 +21,7 @@
   margin-bottom: 50px;
   gap: 8px;
 }
-.section__portfolio {
+.product__title {
   color: $titleTextColor;
   font-weight: $boldWeight;
   font-size: 18px;
@@ -43,7 +43,7 @@
   position: relative;
   overflow: hidden;
 }
-.top__text {
+.product__description {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: $mediumLetterSpacing;
@@ -59,7 +59,7 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.product__list {
+.product {
   display: flex;
   flex-wrap: wrap;
   .item:nth-child(3n) {
@@ -80,8 +80,8 @@
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
-  .item:hover .top__text,
-  .item:focus .top__text {
+  .item:hover .product__description,
+  .item:focus .product__description {
     transform: translateY(0);
   }
 }
