--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,16 +1,17 @@
 .logo {
-  color: $accentColor;
+  color: $titleTextColor;
   font-family: $logoFont;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   text-decoration: none;
+  @include desktop {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
-.page-header__logo {
-  color: $logoHeaderColor;
+.logo__accent {
+  color: $accentColor;
 }
-// .footer__section .accent {
-//   color: $backgroundColor;
-// }
-.footer-info__logo--inverse {
+.logo--light {
   color: $backgroundColor;
 }
