--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,10 +1,11 @@
 .client {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
 }
 .client__link {
-  width: 170px;
+  // width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -16,6 +17,15 @@
   &:focus {
     border-color: $accentColor;
   }
+  @include mobile {
+    width: 210px;
+  }
+  @include tablet {
+    width: 226px;
+  }
+  @include desktop {
+    width: 170px;
+  }
 }
 .client__icon {
   fill: #afb1b8;
@@ -23,5 +33,17 @@
   .client__link:hover &,
   .client__link:focus & {
     fill: $accentColor;
+  }
+}
+.client__item .item {
+  width: 100%;
+  @include mobile {
+    width: calc((100% - 30px) / 2);
+  }
+  @include tablet {
+    width: calc((100% - 30px) / 3);
+  }
+  @include desktop {
+    width: calc((100% - 30px) / 6);
   }
 }
