--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,3 +1,6 @@
+// .menu-container {
+//   display: none;
+// }
 .navigation__list {
   display: flex;
   margin-left: 93px;
@@ -20,21 +23,19 @@
       color: $accentColor;
     }
   }
-  .link.current {
+  .navigation__link--current {
     color: $accentColor;
-  }
-}
-.current {
-  position: relative;
-  &::after {
-    content: '';
-    width: 100%;
-    height: 4px;
-    background-color: $accentColor;
-    border-radius: 2px;
-    position: absolute;
-    bottom: -1px;
-    left: 0;
+    position: relative;
+    &::after {
+      content: '';
+      width: 100%;
+      height: 4px;
+      background-color: $accentColor;
+      border-radius: 2px;
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+    }
   }
 }
 .contact {
@@ -57,7 +58,7 @@
     }
   }
 }
-.page-header {
+.header__container {
   display: flex;
   align-items: center;
 }
@@ -65,3 +66,14 @@
   fill: currentColor;
   margin-right: 10px;
 }
+// .menu-open {
+//   margin-left: auto;
+//   background-color: transparent;
+//   border: none;
+//   padding: 0px;
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+// }
+// .menu-open-icon {
+//   fill: $titleTextColor;
+// }
