--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,20 +1,24 @@
 .hero__title {
   color: $backgroundColor;
   font-weight: $blackWeight;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: $largeLetterSpacing;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 30px;
+  @include desktop {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 .hero {
   background-color: $footerBackgroundColor;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   max-width: 1600px;
-  height: 600px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -22,4 +26,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @include desktop {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    height: 600px;
+  }
 }
