--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,6 +1,3 @@
-.page-team {
-  background-color: $secondaryBackgroundColor;
-}
 .team-card__title {
   color: $titleTextColor;
   font-weight: $mediumWeight;
@@ -13,6 +10,7 @@
   justify-content: center;
 }
 .team {
+  background-color: $secondaryBackgroundColor;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -26,8 +24,15 @@
     margin-bottom: 16px;
   }
   .item {
-    width: 270px;
+    width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    @include tablet {
+      width: calc((100% - 30px) / 2);
+    }
+    @include desktop {
+      width: calc((100% - 30px) / 4);
+      width: 270px;
+    }
   }
 }
 .social {
