--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/mixins.scss';
 @import './base/reset';
 @import './base/common';
 @import './base/section';
